--- a/历史/css/history.css
+++ b/历史/css/history.css
@@ -16,6 +16,7 @@
     text-align: center;
     padding-top: 5vh;
     font-family: "history";
+    font-size: 10vh;
 }
 .swiper-list{
         height: 90vh;
