--- a/Film/css/film.css
+++ b/Film/css/film.css
@@ -56,3 +56,15 @@
         z-index: 1002;
         right: 0px;
     }
+
+    #film{
+        display: none;
+        height: 70vh;
+        width: 80vw;
+        position: fixed;
+        left: 10vw;
+        bottom: 25vh;
+    }
+    #filmVideo{
+        width:80px;
+    }
