--- a/Film/css/film.css
+++ b/Film/css/film.css
@@ -7,7 +7,7 @@
 
 #filmDiv {
   height: 100vh;
-  background-color: white;
+  background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -17,6 +17,7 @@
   padding-top: 5vh;
   font-family: "film";
   font-size: 10vh;
+  color: whitesmoke;
 }
 .mainboard-list {
   height: 90vh;
@@ -59,11 +60,25 @@
 
 #film {
   display: none;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  backdrop-filter: blur(7px);
+}
+#filmContainer {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+}
+
+.backDrop {
   height: 720px;
   width: 1280px;
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  bottom:10vh;
+  bottom: 10vh;
 }
