--- a/Film/css/film.css
+++ b/Film/css/film.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  background: url(../../bg.png) no-repeat center center;
+  background-size:100% 100%;
+  height: 100vh;
+  width: 100vh;
 }
 
 @font-face {
@@ -10,8 +14,8 @@ body {
 }
 
 #filmDiv {
-  height: 100vh;
-  background-color: black;
+  height: 84vh;
+  width:auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -20,8 +24,12 @@ body {
   text-align: center;
   padding-top: 5vh;
   font-family: "film";
-  font-size: 10vh;
+  font-size: 13vh;
   color: whitesmoke;
+  width:100vw;
+  text-shadow: 5px 5px rgb(156, 156, 156);
+  position: relative;
+  top:15px;
 }
 .mainboard-list {
   height: 90vh;
@@ -64,8 +72,8 @@ body {
 
 #film {
   display: none;
-  width: 100vw;
-  height: 100vh;
+  width: 70vw;
+  height: 80vh;
   position: fixed;
   left: 0px;
   bottom: 0px;
