--- a/Popcorn/css/style.css
+++ b/Popcorn/css/style.css
@@ -7,6 +7,8 @@ body {
     margin: 0;
     overflow: hidden;
     text-align: center;
+    background: url(../../bg.png) no-repeat center center;
+    background-size:100% 100%;
 }
 
 #Background {
