--- a/people/css/people.css
+++ b/people/css/people.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  background: url(../../bg.png) no-repeat center center;
+  background-size:100% 100%;
+  height: 100vh;
+  width: 100vh;
 }
 
 
@@ -34,8 +38,8 @@ p {
 }
 
 #peopleDiv {
-  height: 100vh;
-  background-color: black;
+  height: 80vh;
+  width: 100vw;
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
@@ -45,9 +49,13 @@ p {
 #peopleTitle {
   font-family: peopleTitle;
   text-align: center;
-  font-size: 10vh;
+  font-size: 13vh;
   line-height: 12vh;
   color: whitesmoke;
+  width: 100vw;
+  text-shadow: 5px 5px rgb(156, 156, 156);
+  position: relative;
+  top:15px;
 }
 
 #peopleMain {
@@ -56,11 +64,12 @@ p {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  width:100vw;
 }
 
 #q {
   width: 25vw;
-  height: 40vh;
+  height: 33vh;
   padding: 1vh;
   display: -webkit-flex;
   display: flex;
