--- a/people/css/people.css
+++ b/people/css/people.css
@@ -3,7 +3,7 @@ body {
   background: url(../../bg.png) no-repeat center center;
   background-size:100% 100%;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
 }
 
 
