--- a/EndPage/EndPage.css
+++ b/EndPage/EndPage.css
@@ -14,7 +14,7 @@ body {
     font-style: normal;
   }
 
-div{
+/* #first,#second{
     margin:0 auto;
     text-align: center;
     font-family:Endpage;
@@ -22,8 +22,40 @@ div{
     width:90%;
     position: relative;
     top:120px;
-}
+    text-shadow: 4px 4px rgba(168, 168, 168, 0.795);
+    display: none;
+    transition-delay: 2s;
+    transition-duration: 1.5s;
+} */
 
-#second{
-    top:130px;
-}
+div {
+    margin:0 auto;
+    text-align: center;
+    font-family:Endpage;
+    font-size: 4.5rem;
+    line-height: 80px;
+    width:88%;
+    position: relative;
+    top:120px;
+    text-shadow: 4px 4px rgba(168, 168, 168, 0.795);
+    opacity: 0;
+  }
+
+  @keyframes slide {
+    0% {opacity: 0;top:200px;}
+    75% {opacity: 0.8;top:100px;}
+    100%{opacity: 1;top:120px;}
+  }
+
+  #first{
+    animation-name: slide;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+  }
+
+  #second{
+    animation-name: slide;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
+  }
