--- a/EndPage/EndPage.css
+++ b/EndPage/EndPage.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url(../bg.png) no-repeat center center;
+    background-image: linear-gradient(#7480c5,#7c89d4, rgb(161, 171, 238));
     background-size:100% 100%;
     height: 100vh;
     width: 100vw;
@@ -12,21 +12,7 @@ body {
     src: url('fifawelcome1.3.ttf');
     font-weight: normal;
     font-style: normal;
-  }
-
-/* #first,#second{
-    margin:0 auto;
-    text-align: center;
-    font-family:Endpage;
-    font-size: 75px;
-    width:90%;
-    position: relative;
-    top:120px;
-    text-shadow: 4px 4px rgba(168, 168, 168, 0.795);
-    display: none;
-    transition-delay: 2s;
-    transition-duration: 1.5s;
-} */
+}
 
 div {
     margin:0 auto;
@@ -39,23 +25,42 @@ div {
     top:120px;
     text-shadow: 4px 4px rgba(168, 168, 168, 0.795);
     opacity: 0;
-  }
+}
 
-  @keyframes slide {
+@keyframes slide {
     0% {opacity: 0;top:200px;}
     75% {opacity: 0.8;top:100px;}
     100%{opacity: 1;top:120px;}
-  }
+}
 
-  #first{
-    animation-name: slide;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-  }
-
-  #second{
+#first{
     animation-name: slide;
     animation-duration: 2s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
-  }
+}
+
+#second{
+    animation-name: slide;
+    animation-duration: 2s;
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes show {
+    0% {opacity: 0;bottom: -10px;}
+    75% {opacity: 0.8;bottom:20px;}
+    100%{opacity: 1;bottom: 5px;}
+}
+
+img{
+    margin-left: 20vw;
+    position: fixed;
+    bottom:5px;
+    width:60vw;
+    z-index: -100;
+    animation-name: show;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+}
