--- a/Film/css/film.css
+++ b/Film/css/film.css
@@ -1,9 +1,27 @@
 body {
   margin: 0;
-  background: url(../../bg.png) no-repeat center center;
+  background-image: linear-gradient(#7480c5,#7c89d4, rgb(161, 171, 238));
   background-size: 100% 100%;
   height: 100vh;
   width: 100vh;
+}
+
+@keyframes show {
+  0% {opacity: 0;bottom: -10px;}
+  75% {opacity: 0.8;bottom:20px;}
+  100%{opacity: 1;bottom: 5px;}
+}
+
+#bottomImg{
+  margin-left: 20vw;
+  position: fixed;
+  bottom:5px;
+  width:60vw;
+  z-index: -100;
+  animation-name: show;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
 }
 
 @font-face {
