--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-  margin:0;
+  margin: 0;
   overflow-x: hidden;
   background: #b1adea;
 }
@@ -7,4 +7,13 @@ body {
 iframe::-webkit-scrollbar {
   width: 0px;
   height: 0px;
+}
+
+#team {
+  opacity: 90%;
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  z-index: 10;
+  height: 50px;
 }
