--- a/people/css/people.css
+++ b/people/css/people.css
@@ -1,21 +1,30 @@
 body {
   margin: 0;
-  background-image: linear-gradient(#7480c5,#7c89d4, rgb(161, 171, 238));
+  background-image: linear-gradient(#7480c5, #7c89d4, rgb(161, 171, 238));
   background-size: 100% 100%;
   height: 100vh;
   width: 100vw;
 }
 @keyframes show {
-  0% {opacity: 0;bottom: -10px;}
-  75% {opacity: 0.8;bottom:20px;}
-  100%{opacity: 1;bottom: 5px;}
+  0% {
+    opacity: 0;
+    bottom: -10px;
+  }
+  75% {
+    opacity: 0.8;
+    bottom: 20px;
+  }
+  100% {
+    opacity: 1;
+    bottom: 5px;
+  }
 }
 
-#bottomImg{
+#bottomImg {
   margin-left: 20vw;
   position: fixed;
-  bottom:5px;
-  width:60vw;
+  bottom: 5px;
+  width: 60vw;
   z-index: -100;
   animation-name: show;
   animation-duration: 2s;
@@ -29,28 +38,6 @@ body {
   src: url("peopleTitle.TTF");
   font-weight: normal;
   font-style: normal;
-}
-@font-face {
-  font-family: "peopleFilm";
-  src: url("peopleFilm.TTF");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "peopleCa";
-  src: url("peopleCa.TTF");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "peopleIn";
-  src: url("peopleIn.ttc");
-  font-weight: normal;
-  font-style: normal;
-}
-/*缩紧两格 */
-p {
-  text-indent: 2em;
 }
 
 #peopleDiv {
@@ -107,20 +94,6 @@ p {
   backdrop-filter: blur(7px);
 }
 
-#peopleFilm {
-  text-align: center;
-  font-family: peopleFilm;
-  color: whitesmoke;
-}
-
-#peopleCa {
-  text-align: center;
-  font-family: peopleCa;
-}
-
-#peopleIn {
-  font-family: peopleIn;
-}
 .backDrop {
   height: 70vh;
   position: fixed;
