--- a/index.css
+++ b/index.css
@@ -10,10 +10,12 @@ iframe::-webkit-scrollbar {
 }
 
 #team {
+  filter: invert(100%);
   opacity: 50%;
   position: fixed;
-  left: 50px;
-  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 30px;
   z-index: 10;
   height: 50px;
 }
