--- a/people/css/people.css
+++ b/people/css/people.css
@@ -21,10 +21,10 @@ body {
 }
 
 #bottomImg {
-  margin-left: 20vw;
+  margin-left: 30vw;
+  bottom: 5px
   position: fixed;
-  bottom: 5px;
-  width: 60vw;
+  width: 45vw;
   z-index: -100;
   animation-name: show;
   animation-duration: 2s;
