--- a/timeLine/css/timeline.css
+++ b/timeLine/css/timeline.css
@@ -14,7 +14,7 @@
     display: grid;
     width: 300vw;
     grid-template-columns: repeat(18, 15vw);
-    grid-gap: 1.75vw;
+    grid-gap: 1.7vw;
     grid-row: 1;
     justify-content: center;
     border-bottom: 1px lightgray solid;
@@ -43,13 +43,14 @@
 }
 
 .pictureBox {
-    padding: 0.2rem;
+    margin: 0;
+    padding: 0.3vw;
     height: 100%;
     overflow: auto;
 }
 
 .pictureboder {
-    padding: 0.5rem;
+    padding: 0.6vw;
     border-radius: 0.3rem;
     border: solid gray;
     border-width: 0.05rem;
@@ -85,7 +86,7 @@
     font-size: 15px;
     color: dimgray;
     padding: 0.3rem;
-    height: 18vh;
+    height: max-content;
     text-align: center;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.1),
     -10px -10px 25px rgba(255,255,255,1);
@@ -94,15 +95,15 @@
 .scroll{
     z-index: 1;
     position:fixed;
-    top:55vh;
-    height: 6vh;
-    width: 1.5vw;
+    top:58vh;
+    height: 6em;
+    width: 3em;
     border: none;
     background-color:transparent;
 }
 
 #right{
-    left:97vw;
+    right:2vw;
 }
 
 #left{
