--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   overflow-x: hidden;
-  background: #b1adea;
+  background: rgb(161, 171, 238);
 }
 
 iframe::-webkit-scrollbar {
