--- a/timeLine/css/timeline.css
+++ b/timeLine/css/timeline.css
@@ -45,10 +45,10 @@ body {
     display: none;
 }
 .icon {
-    width: 2em;
-    height: 2em;
+    width: 3em;
+    height: 3em;
     vertical-align: -0.15em;
-    fill:gray;
+    fill:white;
     overflow: hidden;
 }
 
