--- a/timeLine/css/timeline.css
+++ b/timeLine/css/timeline.css
@@ -60,11 +60,11 @@ body {
     grid-gap: 1.7vw;
     grid-row: 1;
     justify-content: center;
-    border-bottom: 1px lightgray solid;
+    border-bottom: 1px rgba(236, 223, 255, 0.6) solid;
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2),
-    0px 0px 0px rgba(255, 255, 255, 0.8),
+    0px 0px 0px rgba(210, 182, 255, 0.7),
     inset -10px -0px 30px rgba(0, 0, 0, 0.05),
-    inset 0px 0px 30px rgba(255, 255, 255, 1);
+    inset 0px 0px 30px rgba(232, 218, 255, 0.7);
     z-index: -1;
     padding-top: 10vh;
 }
@@ -97,9 +97,9 @@ body {
 .pictureboder {
     padding: 0.6vw;
     border-radius: 0.3rem;
-    border: solid gray;
-    border-width: 0.05rem;
-    box-shadow: inset 0.15rem 0.15rem 0.3rem rgba(0, 0, 0, 0.1), inset -0.15rem -0.15rem 0.3rem rgba(0, 0, 0, 0.1);
+    border: solid whitesmoke;
+    border-width: 0.06rem;
+    box-shadow: inset 0.15rem 0.15rem 0.3rem rgba(33, 20, 65, 0.2), inset -0.15rem -0.15rem 0.3rem rgba(33, 20, 65, 0.2);
 }
 
 .pictureboder img {
@@ -127,12 +127,12 @@ body {
 }
 .index {
     font-size: 15px;
-    color: dimgray;
+    color: white;
     padding: 0.3rem;
     height: max-content;
     text-align: center;
     box-shadow: 10px 10px 20px rgba(0,0,0,0.1),
-    -10px -10px 25px rgba(255,255,255,1);
+    -10px -10px 25px rgba(255,255,255,0.2);
     border-radius: 0.5rem;
 }
 .scroll{
